infrastructure/kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devpulse-ingress
  namespace: devpulse
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: devpulse.local
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /api/urls
            pathType: Prefix
            backend:
              service:
                name: url-service
                port:
                  number: 3002
          - path: /api/analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 3003
          - path: /r
            pathType: Prefix
            backend:
              service:
                name: url-service
                port:
                  number: 3002
